[package]
name = "rp2040-boot2"
version = "0.2.1"
authors = ["The rp-rs Team"]
edition = "2018"
license = "BSD-3-Clause"
repository = "https://github.com/rp-rs/rp2040-boot2-rs"
description = "Raspberry Pi RP2040 SoC second stage bootloader."

[dependencies]

[build-dependencies]
crc-any = "2.3"

[features]
# Assemble the boot2 files. Requires GCC
assemble = []
# Set PICO_FLASH_SPI_CLKDIV=2 instead of 4 for
# faster flash access
fast-flash = ["assemble"]
